{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 338,
  "lineage": "bb732695-2c78-e39f-ac07-cd8c1744047e",
  "resources": [
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:security-group/sg-062aeecf2e61dd6a5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-062aeecf2e61dd6a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e90fc015bc08c1e7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-gateway-cluster-20251118071104507000000001",
            "name_prefix": "eks-gateway-cluster-",
            "owner_id": "721500739616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-gateway-cluster",
              "Project": "multi-vpc-eks"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-gateway-cluster",
              "Project": "multi-vpc-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:security-group/sg-0e90fc015bc08c1e7",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e90fc015bc08c1e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062aeecf2e61dd6a5"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-gateway-node-20251118071104507200000002",
            "name_prefix": "eks-gateway-node-",
            "owner_id": "721500739616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-gateway-node",
              "Project": "multi-vpc-eks",
              "kubernetes.io/cluster/eks-gateway": "owned"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-gateway-node",
              "Project": "multi-vpc-eks",
              "kubernetes.io/cluster/eks-gateway": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-679507212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-062aeecf2e61dd6a5",
            "security_group_rule_id": "sgr-0ed840bcf4e1680fd",
            "self": false,
            "source_security_group_id": "sg-0e90fc015bc08c1e7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-336596627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-00cb2e8f45bec648a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3086067520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-00d40c308f1d27f00",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2620249719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0884feb6651e0657c",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1433383393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-043ec65bffc387734",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1177783744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0baf04779500df7e9",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-580042251",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0c171fdc660e1b5db",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2421083067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0fb210c3c10b04c13",
            "self": false,
            "source_security_group_id": "sg-062aeecf2e61dd6a5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2315034378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0bad21463b2cb6d37",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2559125584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-0345f06f49c37fee5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1020693439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e90fc015bc08c1e7",
            "security_group_rule_id": "sgr-057ae21efb0d65c5d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_gateway.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gateway_endpoint",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:security-group/sg-06aee9ca935be7766",
            "description": "SG for Interface VPC Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aee9ca935be7766",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow traffic from VPC internal CIDR",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "endpoint-interface",
            "name_prefix": "",
            "owner_id": "721500739616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "endpoint-interface"
            },
            "tags_all": {
              "Name": "endpoint-interface"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:vpc-endpoint/vpce-079d6777e13eb6ee5",
            "dns_entry": [
              {
                "dns_name": "vpce-079d6777e13eb6ee5-3sait9nt.vpce-svc-0703c8716a0a86192.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-079d6777e13eb6ee5-3sait9nt-us-west-2b.vpce-svc-0703c8716a0a86192.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-079d6777e13eb6ee5-3sait9nt-us-west-2a.vpce-svc-0703c8716a0a86192.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-079d6777e13eb6ee5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0154eb5cdd70a528e",
              "eni-0249bca32c1f5449f"
            ],
            "owner_id": "721500739616",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06aee9ca935be7766"
            ],
            "service_name": "com.amazonaws.vpce.us-west-2.vpce-svc-0703c8716a0a86192",
            "service_region": "us-west-2",
            "state": "pendingAcceptance",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.158",
                "subnet_id": "subnet-0fc7365ef79e86f34"
              },
              {
                "ipv4": "10.10.12.18",
                "subnet_id": "subnet-0e4e753ee050db38a"
              }
            ],
            "subnet_ids": [
              "subnet-0e4e753ee050db38a",
              "subnet-0fc7365ef79e86f34"
            ],
            "tags": {
              "Name": "proxy-application-routing"
            },
            "tags_all": {
              "Name": "proxy-application-routing"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_endpoint.aws_security_group.endpoint_sg",
            "module.nlb_to_alb.aws_lb.nlb",
            "module.nlb_to_alb.aws_security_group.nlb_sg",
            "module.proxy_vpce_service.aws_vpc_endpoint_service.this",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_to_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:loadbalancer/net/nlb-routing-to-backend/83b9f8bb19d06208",
            "arn_suffix": "net/nlb-routing-to-backend/83b9f8bb19d06208",
            "dns_name": "nlb-routing-to-backend-83b9f8bb19d06208.elb.us-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "enforce_security_group_inbound_rules_on_private_link_traffic": "on",
            "id": "arn:aws:elasticloadbalancing:us-west-2:721500739616:loadbalancer/net/nlb-routing-to-backend/83b9f8bb19d06208",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-routing-to-backend",
            "security_groups": [
              "sg-063ef88d993b20e08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0702bc09bb6d370f1"
              },
              {
                "subnet_id": "subnet-07b5c7a948d741fbe"
              }
            ],
            "subnets": [
              "subnet-0702bc09bb6d370f1",
              "subnet-07b5c7a948d741fbe"
            ],
            "vpc_id": "vpc-0d5fe5db59dd8bc11",
            "zone_id": "Z18D5FSROUN65G"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb_to_alb.aws_security_group.nlb_sg",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_to_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:listener/net/nlb-routing-to-backend/83b9f8bb19d06208/ac6d6ec3263fb505",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:721500739616:listener/net/nlb-routing-to-backend/83b9f8bb19d06208/ac6d6ec3263fb505",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:loadbalancer/net/nlb-routing-to-backend/83b9f8bb19d06208",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb_to_alb.aws_lb.nlb",
            "module.nlb_to_alb.aws_lb_target_group.tg",
            "module.nlb_to_alb.aws_security_group.nlb_sg",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_to_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b",
            "arn_suffix": "targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:721500739616:targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:721500739616:loadbalancer/net/nlb-routing-to-backend/83b9f8bb19d06208"
            ],
            "name": "nlb-routing-to-backend-tg",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_to_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:721500739616:targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b-20251118181811747300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:721500739616:targetgroup/nlb-routing-to-backend-tg/5cfc131808841c1b",
            "target_id": "arn:aws:elasticloadbalancing:us-west-2:721500739616:loadbalancer/app/k8s-app-albingre-3a38bb3501/8099cbfae60fa5c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb_to_alb.aws_lb_target_group.tg",
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb_to_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:security-group/sg-063ef88d993b20e08",
            "description": "SG for internal NLB ENIs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063ef88d993b20e08",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow VPC traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nlb-routing-to-backend-sg",
            "name_prefix": "",
            "owner_id": "721500739616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035f0a38d53de9fe5",
            "arn": "arn:aws:ec2:us-west-2:721500739616:elastic-ip/eipalloc-035f0a38d53de9fe5",
            "domain": "vpc",
            "id": "eipalloc-035f0a38d53de9fe5",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-85-172-93.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.172.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-backend-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-backend-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:internet-gateway/igw-0ecc0e04aa330dfa8",
            "id": "igw-0ecc0e04aa330dfa8",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-backend-igw"
            },
            "tags_all": {
              "Name": "vpc-backend-igw"
            },
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035f0a38d53de9fe5",
            "association_id": "eipassoc-0d9f00de13c7c7b1f",
            "connectivity_type": "public",
            "id": "nat-0673fd4738bb51eff",
            "network_interface_id": "eni-088228adc0f40c36a",
            "private_ip": "10.20.1.6",
            "public_ip": "35.85.172.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ccfeda2c3359f9b3",
            "tags": {
              "Name": "vpc-backend-nat-gw"
            },
            "tags_all": {
              "Name": "vpc-backend-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_eip.nat_eip",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031954851bbdda9b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0673fd4738bb51eff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031954851bbdda9b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_eip.nat_eip",
            "module.vpc_backend.aws_nat_gateway.nat",
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecc0e04aa330dfa8",
            "id": "r-rtb-0afad3b0832c1e9991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afad3b0832c1e999",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_route_table.public",
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-031954851bbdda9b7",
            "id": "rtb-031954851bbdda9b7",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0673fd4738bb51eff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-backend-private-rt"
            },
            "tags_all": {
              "Name": "vpc-backend-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-0afad3b0832c1e999",
            "id": "rtb-0afad3b0832c1e999",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-backend-public-rt"
            },
            "tags_all": {
              "Name": "vpc-backend-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c59049fc541f0d",
            "route_table_id": "rtb-031954851bbdda9b7",
            "subnet_id": "subnet-07b5c7a948d741fbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6a2700b51584439",
            "route_table_id": "rtb-031954851bbdda9b7",
            "subnet_id": "subnet-0702bc09bb6d370f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ca6d1fd8da6bf53",
            "route_table_id": "rtb-0afad3b0832c1e999",
            "subnet_id": "subnet-0ccfeda2c3359f9b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.public",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-07b5c7a948d741fbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5c7a948d741fbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-backend-private-1"
            },
            "tags_all": {
              "Name": "vpc-backend-private-1"
            },
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0702bc09bb6d370f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0702bc09bb6d370f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-backend-private-2"
            },
            "tags_all": {
              "Name": "vpc-backend-private-2"
            },
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0ccfeda2c3359f9b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfeda2c3359f9b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-backend-public-1"
            },
            "tags_all": {
              "Name": "vpc-backend-public-1"
            },
            "vpc_id": "vpc-0d5fe5db59dd8bc11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_backend.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:vpc/vpc-0d5fe5db59dd8bc11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-016fd47483ea5a489",
            "default_route_table_id": "rtb-01f8b1b90ff939ed4",
            "default_security_group_id": "sg-067c925b34a43cbd9",
            "dhcp_options_id": "dopt-0848e66d7f6f5a487",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5fe5db59dd8bc11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f8b1b90ff939ed4",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-backend-vpc"
            },
            "tags_all": {
              "Name": "vpc-backend-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e49e45d9ec366d1b",
            "arn": "arn:aws:ec2:us-west-2:721500739616:elastic-ip/eipalloc-0e49e45d9ec366d1b",
            "association_id": "eipassoc-05716dfed163bd630",
            "domain": "vpc",
            "id": "eipalloc-0e49e45d9ec366d1b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09dbfec1227c22b9d",
            "private_dns": "ip-10-10-1-102.us-west-2.compute.internal",
            "private_ip": "10.10.1.102",
            "public_dns": "ec2-35-164-109-14.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.109.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-gateway-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-gateway-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:internet-gateway/igw-0a789798c919d062c",
            "id": "igw-0a789798c919d062c",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-gateway-igw"
            },
            "tags_all": {
              "Name": "vpc-gateway-igw"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e49e45d9ec366d1b",
            "association_id": "eipassoc-05716dfed163bd630",
            "connectivity_type": "public",
            "id": "nat-0227a2e5094722948",
            "network_interface_id": "eni-09dbfec1227c22b9d",
            "private_ip": "10.10.1.102",
            "public_ip": "35.164.109.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cde07edee3714a8f",
            "tags": {
              "Name": "vpc-gateway-nat-gw"
            },
            "tags_all": {
              "Name": "vpc-gateway-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat_eip",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f6d4a7c12ca5eb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0227a2e5094722948",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat_eip",
            "module.vpc_gateway.aws_nat_gateway.nat",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a789798c919d062c",
            "id": "r-rtb-0df7aa22b94190c451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-02f6d4a7c12ca5eb9",
            "id": "rtb-02f6d4a7c12ca5eb9",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0227a2e5094722948",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-gateway-private-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-0df7aa22b94190c45",
            "id": "rtb-0df7aa22b94190c45",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a789798c919d062c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-gateway-public-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf6456c674eb637",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "subnet_id": "subnet-0fc7365ef79e86f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afa1d9d666179bfe",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "subnet_id": "subnet-0e4e753ee050db38a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a54963d744decd",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "subnet_id": "subnet-0cde07edee3714a8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac8ca3e7510bf7c",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "subnet_id": "subnet-00d7365fa25fffa9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0fc7365ef79e86f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc7365ef79e86f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-private-1"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-1"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0e4e753ee050db38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e753ee050db38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-private-2"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-2"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0cde07edee3714a8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde07edee3714a8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-public-1"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-1"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-00d7365fa25fffa9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d7365fa25fffa9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-public-2"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-2"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:vpc/vpc-090feb488bedbcb62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08e2e7b5fd1878f7d",
            "default_route_table_id": "rtb-0174197b53cd288c1",
            "default_security_group_id": "sg-0ba47e62e3e13f42a",
            "dhcp_options_id": "dopt-0848e66d7f6f5a487",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090feb488bedbcb62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0174197b53cd288c1",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-gateway-vpc"
            },
            "tags_all": {
              "Name": "vpc-gateway-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_private_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031954851bbdda9b7519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031954851bbdda9b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-009f50c8b0e017ef4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_peering_gateway_backend.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_private_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f6d4a7c12ca5eb9662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-009f50c8b0e017ef4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_peering_gateway_backend.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_public_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0df7aa22b94190c45662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-009f50c8b0e017ef4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_peering_gateway_backend.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-009f50c8b0e017ef4",
            "peer_owner_id": "721500739616",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0d5fe5db59dd8bc11",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-gateway-backend"
            },
            "tags_all": {
              "Name": "vpc-gateway-backend"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.vpc",
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}